--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,44 @@
 .App {
   padding: 20px;
+  width: 768px;
+  margin: 150px auto 0px auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.App .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  margin-bottom: 32px;
+}
+
+.App .infoText {
+  text-align: center;
+}
+
+.App .docsLink {
+  gap: 12px;
+  display: inline-block;
+  height: 100%;
+  padding: 0px 12px;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  border: 1px #e8e8e8 solid;
+  border-radius: 4px;
+}
+
+.App .tooltipCtr {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 12px;
+}
+
+.App .tooltipCtr .row {
+  display: flex;
+  gap: 12px;
 }
 
 .App .starIcon {
